packages/dsl/src/antlr/generated/grammar/LacLangParser.ts
// Generated from ./grammar/LacLang.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { RecognitionException } from 'antlr4ts/RecognitionException';
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { LacLangListener } from './LacLangListener';

export class LacLangParser extends Parser {
  public static readonly T__0 = 1;
  public static readonly T__1 = 2;
  public static readonly T__2 = 3;
  public static readonly T__3 = 4;
  public static readonly T__4 = 5;
  public static readonly T__5 = 6;
  public static readonly T__6 = 7;
  public static readonly T__7 = 8;
  public static readonly T__8 = 9;
  public static readonly T__9 = 10;
  public static readonly T__10 = 11;
  public static readonly T__11 = 12;
  public static readonly T__12 = 13;
  public static readonly T__13 = 14;
  public static readonly T__14 = 15;
  public static readonly T__15 = 16;
  public static readonly T__16 = 17;
  public static readonly T__17 = 18;
  public static readonly T__18 = 19;
  public static readonly T__19 = 20;
  public static readonly T__20 = 21;
  public static readonly WITH_KEYWORD = 22;
  public static readonly ADDRESS_LITERAL = 23;
  public static readonly BOOL_LITERAL = 24;
  public static readonly NUMBER_LITERAL = 25;
  public static readonly STRING_LITERAL = 26;
  public static readonly BYTES_LITERAL = 27;
  public static readonly IDENTIFIER = 28;
  public static readonly WHITESPACE = 29;
  public static readonly COMMENT = 30;
  public static readonly RULE_program = 0;
  public static readonly RULE_statement = 1;
  public static readonly RULE_importStatement = 2;
  public static readonly RULE_directive = 3;
  public static readonly RULE_directiveIndentifier = 4;
  public static readonly RULE_injectedOnlyDirective = 5;
  public static readonly RULE_varDeclaration = 6;
  public static readonly RULE_injectionModifier = 7;
  public static readonly RULE_constantDeclaration = 8;
  public static readonly RULE_artifactDeclaration = 9;
  public static readonly RULE_instanceDeclaration = 10;
  public static readonly RULE_evaluateStatement = 11;
  public static readonly RULE_dataType = 12;
  public static readonly RULE_constantsList = 13;
  public static readonly RULE_argumentsList = 14;
  public static readonly RULE_identifier_or_literal = 15;
  public static readonly RULE_literal = 16;
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'program',
    'statement',
    'importStatement',
    'directive',
    'directiveIndentifier',
    'injectedOnlyDirective',
    'varDeclaration',
    'injectionModifier',
    'constantDeclaration',
    'artifactDeclaration',
    'instanceDeclaration',
    'evaluateStatement',
    'dataType',
    'constantsList',
    'argumentsList',
    'identifier_or_literal',
    'literal',
  ];

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    "'import'",
    "';'",
    "'pragma'",
    "'injected-only'",
    "'var'",
    "'inject'",
    "'('",
    "')'",
    "'constant'",
    "'='",
    "'artifact'",
    "'instance'",
    "'of'",
    "'takes'",
    "'evaluate'",
    "'bool'",
    "'number'",
    "'string'",
    "'bytes'",
    "'address'",
    "','",
    "'with'",
  ];
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    undefined,
    'WITH_KEYWORD',
    'ADDRESS_LITERAL',
    'BOOL_LITERAL',
    'NUMBER_LITERAL',
    'STRING_LITERAL',
    'BYTES_LITERAL',
    'IDENTIFIER',
    'WHITESPACE',
    'COMMENT',
  ];
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    LacLangParser._LITERAL_NAMES,
    LacLangParser._SYMBOLIC_NAMES,
    [],
  );

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return LacLangParser.VOCABULARY;
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return 'LacLang.g4';
  }

  // @Override
  public get ruleNames(): string[] {
    return LacLangParser.ruleNames;
  }

  // @Override
  public get serializedATN(): string {
    return LacLangParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(LacLangParser._ATN, this);
  }
  // @RuleVersion(0)
  public program(): ProgramContext {
    let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
    this.enterRule(_localctx, 0, LacLangParser.RULE_program);
    try {
      let _alt: number;
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 37;
        this._errHandler.sync(this);
        _alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
        while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1 + 1) {
            {
              {
                this.state = 34;
                this.importStatement();
              }
            }
          }
          this.state = 39;
          this._errHandler.sync(this);
          _alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx);
        }
        this.state = 43;
        this._errHandler.sync(this);
        _alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
        while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1 + 1) {
            {
              {
                this.state = 40;
                this.directive();
              }
            }
          }
          this.state = 45;
          this._errHandler.sync(this);
          _alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
        }
        this.state = 49;
        this._errHandler.sync(this);
        _alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
        while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
          if (_alt === 1 + 1) {
            {
              {
                this.state = 46;
                this.statement();
              }
            }
          }
          this.state = 51;
          this._errHandler.sync(this);
          _alt = this.interpreter.adaptivePredict(this._input, 2, this._ctx);
        }
        this.state = 52;
        this.match(LacLangParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public statement(): StatementContext {
    let _localctx: StatementContext = new StatementContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 2, LacLangParser.RULE_statement);
    try {
      this.state = 59;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case LacLangParser.T__4:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 54;
            this.varDeclaration();
          }
          break;
        case LacLangParser.T__8:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 55;
            this.constantDeclaration();
          }
          break;
        case LacLangParser.T__10:
          this.enterOuterAlt(_localctx, 3);
          {
            this.state = 56;
            this.artifactDeclaration();
          }
          break;
        case LacLangParser.T__11:
          this.enterOuterAlt(_localctx, 4);
          {
            this.state = 57;
            this.instanceDeclaration();
          }
          break;
        case LacLangParser.T__14:
          this.enterOuterAlt(_localctx, 5);
          {
            this.state = 58;
            this.evaluateStatement();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public importStatement(): ImportStatementContext {
    let _localctx: ImportStatementContext = new ImportStatementContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 4, LacLangParser.RULE_importStatement);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 61;
        this.match(LacLangParser.T__0);
        this.state = 62;
        this.match(LacLangParser.STRING_LITERAL);
        this.state = 63;
        this.match(LacLangParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public directive(): DirectiveContext {
    let _localctx: DirectiveContext = new DirectiveContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 6, LacLangParser.RULE_directive);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 65;
        this.match(LacLangParser.T__2);
        this.state = 66;
        this.directiveIndentifier();
        this.state = 67;
        this.match(LacLangParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public directiveIndentifier(): DirectiveIndentifierContext {
    let _localctx: DirectiveIndentifierContext =
      new DirectiveIndentifierContext(this._ctx, this.state);
    this.enterRule(_localctx, 8, LacLangParser.RULE_directiveIndentifier);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 69;
        this.injectedOnlyDirective();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public injectedOnlyDirective(): InjectedOnlyDirectiveContext {
    let _localctx: InjectedOnlyDirectiveContext =
      new InjectedOnlyDirectiveContext(this._ctx, this.state);
    this.enterRule(_localctx, 10, LacLangParser.RULE_injectedOnlyDirective);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 71;
        this.match(LacLangParser.T__3);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public varDeclaration(): VarDeclarationContext {
    let _localctx: VarDeclarationContext = new VarDeclarationContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 12, LacLangParser.RULE_varDeclaration);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 73;
        this.match(LacLangParser.T__4);
        this.state = 75;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === LacLangParser.T__5) {
          {
            this.state = 74;
            this.injectionModifier();
          }
        }

        this.state = 77;
        this.dataType();
        this.state = 78;
        this.match(LacLangParser.IDENTIFIER);
        this.state = 79;
        this.match(LacLangParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public injectionModifier(): InjectionModifierContext {
    let _localctx: InjectionModifierContext = new InjectionModifierContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 14, LacLangParser.RULE_injectionModifier);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 81;
        this.match(LacLangParser.T__5);
        this.state = 82;
        this.match(LacLangParser.T__6);
        this.state = 83;
        this.match(LacLangParser.STRING_LITERAL);
        this.state = 84;
        this.match(LacLangParser.T__7);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public constantDeclaration(): ConstantDeclarationContext {
    let _localctx: ConstantDeclarationContext = new ConstantDeclarationContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 16, LacLangParser.RULE_constantDeclaration);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 86;
        this.match(LacLangParser.T__8);
        this.state = 87;
        this.dataType();
        this.state = 88;
        this.match(LacLangParser.IDENTIFIER);
        this.state = 89;
        this.match(LacLangParser.T__9);
        this.state = 90;
        this.literal();
        this.state = 91;
        this.match(LacLangParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public artifactDeclaration(): ArtifactDeclarationContext {
    let _localctx: ArtifactDeclarationContext = new ArtifactDeclarationContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 18, LacLangParser.RULE_artifactDeclaration);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 93;
        this.match(LacLangParser.T__10);
        this.state = 94;
        this.match(LacLangParser.IDENTIFIER);
        this.state = 95;
        this.match(LacLangParser.T__9);
        this.state = 96;
        this.match(LacLangParser.ADDRESS_LITERAL);
        this.state = 97;
        this.match(LacLangParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public instanceDeclaration(): InstanceDeclarationContext {
    let _localctx: InstanceDeclarationContext = new InstanceDeclarationContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 20, LacLangParser.RULE_instanceDeclaration);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 99;
        this.match(LacLangParser.T__11);
        this.state = 100;
        this.dataType();
        this.state = 101;
        this.match(LacLangParser.IDENTIFIER);
        this.state = 102;
        this.match(LacLangParser.T__12);
        this.state = 103;
        this.identifier_or_literal();
        this.state = 104;
        this.match(LacLangParser.T__13);
        this.state = 105;
        this.match(LacLangParser.T__6);
        this.state = 107;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (
          (_la & ~0x1f) === 0 &&
          ((1 << _la) &
            ((1 << LacLangParser.ADDRESS_LITERAL) |
              (1 << LacLangParser.BOOL_LITERAL) |
              (1 << LacLangParser.NUMBER_LITERAL) |
              (1 << LacLangParser.STRING_LITERAL) |
              (1 << LacLangParser.BYTES_LITERAL) |
              (1 << LacLangParser.IDENTIFIER))) !==
            0
        ) {
          {
            this.state = 106;
            this.argumentsList();
          }
        }

        this.state = 109;
        this.match(LacLangParser.T__7);
        this.state = 116;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === LacLangParser.WITH_KEYWORD) {
          {
            this.state = 110;
            this.match(LacLangParser.WITH_KEYWORD);
            this.state = 111;
            this.match(LacLangParser.T__6);
            this.state = 113;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (
              (_la & ~0x1f) === 0 &&
              ((1 << _la) &
                ((1 << LacLangParser.ADDRESS_LITERAL) |
                  (1 << LacLangParser.BOOL_LITERAL) |
                  (1 << LacLangParser.NUMBER_LITERAL) |
                  (1 << LacLangParser.STRING_LITERAL) |
                  (1 << LacLangParser.BYTES_LITERAL) |
                  (1 << LacLangParser.IDENTIFIER))) !==
                0
            ) {
              {
                this.state = 112;
                this.constantsList();
              }
            }

            this.state = 115;
            this.match(LacLangParser.T__7);
          }
        }

        this.state = 118;
        this.match(LacLangParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public evaluateStatement(): EvaluateStatementContext {
    let _localctx: EvaluateStatementContext = new EvaluateStatementContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 22, LacLangParser.RULE_evaluateStatement);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 120;
        this.match(LacLangParser.T__14);
        this.state = 121;
        this.match(LacLangParser.IDENTIFIER);
        this.state = 122;
        this.match(LacLangParser.T__1);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public dataType(): DataTypeContext {
    let _localctx: DataTypeContext = new DataTypeContext(this._ctx, this.state);
    this.enterRule(_localctx, 24, LacLangParser.RULE_dataType);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 124;
        _la = this._input.LA(1);
        if (
          !(
            (_la & ~0x1f) === 0 &&
            ((1 << _la) &
              ((1 << LacLangParser.T__15) |
                (1 << LacLangParser.T__16) |
                (1 << LacLangParser.T__17) |
                (1 << LacLangParser.T__18) |
                (1 << LacLangParser.T__19))) !==
              0
          )
        ) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public constantsList(): ConstantsListContext {
    let _localctx: ConstantsListContext = new ConstantsListContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 26, LacLangParser.RULE_constantsList);
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 126;
        this.argumentsList();
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public argumentsList(): ArgumentsListContext {
    let _localctx: ArgumentsListContext = new ArgumentsListContext(
      this._ctx,
      this.state,
    );
    this.enterRule(_localctx, 28, LacLangParser.RULE_argumentsList);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 128;
        this.identifier_or_literal();
        this.state = 133;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === LacLangParser.T__20) {
          {
            {
              this.state = 129;
              this.match(LacLangParser.T__20);
              this.state = 130;
              this.identifier_or_literal();
            }
          }
          this.state = 135;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public identifier_or_literal(): Identifier_or_literalContext {
    let _localctx: Identifier_or_literalContext =
      new Identifier_or_literalContext(this._ctx, this.state);
    this.enterRule(_localctx, 30, LacLangParser.RULE_identifier_or_literal);
    try {
      this.state = 138;
      this._errHandler.sync(this);
      switch (this._input.LA(1)) {
        case LacLangParser.IDENTIFIER:
          this.enterOuterAlt(_localctx, 1);
          {
            this.state = 136;
            this.match(LacLangParser.IDENTIFIER);
          }
          break;
        case LacLangParser.ADDRESS_LITERAL:
        case LacLangParser.BOOL_LITERAL:
        case LacLangParser.NUMBER_LITERAL:
        case LacLangParser.STRING_LITERAL:
        case LacLangParser.BYTES_LITERAL:
          this.enterOuterAlt(_localctx, 2);
          {
            this.state = 137;
            this.literal();
          }
          break;
        default:
          throw new NoViableAltException(this);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
  // @RuleVersion(0)
  public literal(): LiteralContext {
    let _localctx: LiteralContext = new LiteralContext(this._ctx, this.state);
    this.enterRule(_localctx, 32, LacLangParser.RULE_literal);
    let _la: number;
    try {
      this.enterOuterAlt(_localctx, 1);
      {
        this.state = 140;
        _la = this._input.LA(1);
        if (
          !(
            (_la & ~0x1f) === 0 &&
            ((1 << _la) &
              ((1 << LacLangParser.ADDRESS_LITERAL) |
                (1 << LacLangParser.BOOL_LITERAL) |
                (1 << LacLangParser.NUMBER_LITERAL) |
                (1 << LacLangParser.STRING_LITERAL) |
                (1 << LacLangParser.BYTES_LITERAL))) !==
              0
          )
        ) {
          this._errHandler.recoverInline(this);
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true;
          }

          this._errHandler.reportMatch(this);
          this.consume();
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return _localctx;
  }
